--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /**/.settings/
 /**/target
 /**/bin
+**/bin*/
 
 # Visual Studio Generated
 .antlr
@@ -29,9 +30,13 @@
 # Ignore downloaded temporaries create by _scripts/get-antlr.ps1
 antlr4-*-complete.jar
 # Ignore Orsted.WindTurbine.DSL project build artifacts
-obj/
+obj/*
 *.csproj.AssemblyReference.cache
 *.nuget.dgspec.json
 *.nuget.g.props
 project.assets.json
 project.nuget.cache
+*.log
+bin/
+obj/
+*.dll
